--- a/static/styles/out.css
+++ b/static/styles/out.css
@@ -596,16 +596,35 @@ video {
   bottom: 0px;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .right-0 {
   right: 0px;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .box-border {
   box-sizing: border-box;
 }
 
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
 .flex {
   display: flex;
+}
+
+.inline-flex {
+  display: inline-flex;
 }
 
 .h-20 {
@@ -620,6 +639,14 @@ video {
   height: 100vh;
 }
 
+.h-\[500px\] {
+  height: 500px;
+}
+
+.max-h-\[70vh\] {
+  max-height: 70vh;
+}
+
 .w-40 {
   width: 10rem;
 }
@@ -630,6 +657,10 @@ video {
 
 .w-\[30\%\] {
   width: 30%;
+}
+
+.w-\[70\%\] {
+  width: 70%;
 }
 
 .w-\[80\%\] {
@@ -644,8 +675,8 @@ video {
   width: 100%;
 }
 
-.resize-y {
-  resize: vertical;
+.resize-none {
+  resize: none;
 }
 
 .flex-row {
@@ -664,12 +695,12 @@ video {
   justify-content: center;
 }
 
-.gap-4 {
-  gap: 1rem;
+.gap-3 {
+  gap: 0.75rem;
 }
 
-.text-clip {
-  text-overflow: clip;
+.gap-4 {
+  gap: 1rem;
 }
 
 .rounded-full {
@@ -715,8 +746,16 @@ video {
   padding: 0.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .p-4 {
   padding: 1rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .text-center {
@@ -737,6 +776,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 input[type=text] {
   width: 18rem;
   flex: 0 1 auto;
@@ -750,4 +794,18 @@ input[type=text] {
 
 input {
   margin: 0.5rem;
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
+}
+
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
