--- a/static/styles/out.css
+++ b/static/styles/out.css
@@ -655,12 +655,12 @@ video {
   width: 2rem;
 }
 
-.w-\[60\%\] {
-  width: 60%;
+.w-\[40rem\] {
+  width: 40rem;
 }
 
-.w-\[70\%\] {
-  width: 70%;
+.w-\[60\%\] {
+  width: 60%;
 }
 
 .w-\[80\%\] {
